# matching-brute-force

./: .gitignore  CMakeLists.txt
include/: defines.hpp  inputModes.hpp  matching.hpp
inputs/: K11.txt  K12.txt  K13.txt  K15.txt  K16.txt  K17.txt  K19.txt  K6.txt  K8.txt
src/: inputModes.cpp  main.cpp  matching.cpp
test/: main.cpp
utils/: createKnGraph.cpp
